[project]
name = "knowledge-graph-agent"
version = "0.1.0"
description = "A dynamic knowledge graph architect agent using Google ADK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.1.0",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
]
